--- a/Week2/26th_March_2024.ipynb
+++ b/Week2/26th_March_2024.ipynb
@@ -34,16 +34,8 @@
    "id": "6d600b98",
    "metadata": {},
    "source": [
-    "## Pseudocode"
+    "## [Article](https://www.geeksforgeeks.org/median-of-two-sorted-arrays-of-different-sizes/)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f561c12d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -59,7 +51,27 @@
    "id": "008aaedf",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def findMedianSortedArrays(self, nums1: List[int], nums2: List[int]) -> float:\n",
+    "        n1,n2=len(nums1),len(nums2)\n",
+    "        if n1>n2:return self.findMedianSortedArrays(nums2,nums1)\n",
+    "        n,left,low,high=n1+n2,(n1+n2+1)//2,0,n1\n",
+    "        while low<=high:\n",
+    "            mid1=(low+high)//2\n",
+    "            mid2=left-mid1\n",
+    "            l1,l2,r1,r2=float('-inf'),float('-inf'),float('inf'),float('inf')\n",
+    "            if mid1<n1:r1=nums1[mid1]\n",
+    "            if mid2<n2:r2=nums2[mid2]\n",
+    "            if mid1-1>=0:l1=nums1[mid1-1]\n",
+    "            if mid2-1>=0:l2=nums2[mid2-1]\n",
+    "            if l1<=r2 and l2<=r1:\n",
+    "                if n%2:return max(l1,l2)\n",
+    "                else: return (max(l1,l2)+min(r1,r2))/2\n",
+    "            elif l1>r2:high=mid1-1\n",
+    "            else: low=mid1+1\n",
+    "        return 0"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -92,7 +104,7 @@
    "source": [
     "- [LeetCode](https://leetcode.com/problems/find-peak-element/)\n",
     "- [Coding Ninjas](https://www.codingninjas.com/studio/problems/find-peak-element_1081482)\n",
-    "- [InterviewBit](https://search.brave.com/search?q=peak+element+interviewbit&source=desktop)"
+    "- [InterviewBit](https://www.interviewbit.com/problems/find-a-peak-element/)"
    ]
   },
   {
@@ -104,12 +116,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "33d771fc",
+   "cell_type": "markdown",
+   "id": "71b5ea49",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Apply binary search by checking if the adjacent elements are smaller.\n",
+    "- if the next element is larger search in right side else left side."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,11 +134,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "fb0a6e59",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class Solution:\n",
+    "    def findPeakElement(self, arr):\n",
+    "        L,r=0,len(arr)-1\n",
+    "        while L<=r:\n",
+    "            m=(L+r)//2\n",
+    "            if (m==0 or arr[m-1]<=arr[m]) and (m==len(arr)-1 or arr[m]>=arr[m+1]):\n",
+    "                return m\n",
+    "            elif arr[m]<arr[m+1]:\n",
+    "                L=m+1\n",
+    "            else:\n",
+    "                r=m-1\n",
+    "        return -1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -154,8 +180,8 @@
    "id": "0c8cb76e",
    "metadata": {},
    "source": [
-    "- [Coding Ninjas](https://www.codingninjas.com/studio/problems/median-in-matrix_981178)\n",
-    "- [Interviewbit]()"
+    "- [Coding Ninjas](https://www.codingninjas.com/studio/problems/median-of-a-row-wise-sorted-matrix_1115473)\n",
+    "- [Interviewbit](https://www.interviewbit.com/problems/matrix-median/)"
    ]
   },
   {
@@ -167,12 +193,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b6b934a5",
+   "cell_type": "markdown",
+   "id": "5a5b79e0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "- Create a count function using binary search to find number of elements lesser or equal to mid in each row.\n",
+    "- Apply binary search on answer to find (m+n)//2 elements on each side by summing counts for all rows."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,11 +211,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "530ded1e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def median(matrix: [[int]], m: int, n: int) -> int:\n",
+    "    def Count(row, mid):\n",
+    "        left, right = 0, len(row) - 1\n",
+    "        while left <= right:\n",
+    "            mid_idx = left + (right - left) // 2\n",
+    "            if row[mid_idx] <= mid:\n",
+    "                left = mid_idx + 1\n",
+    "            else:\n",
+    "                right = mid_idx - 1\n",
+    "        return left\n",
+    "\n",
+    "    L, r = 1, 10**9\n",
+    "    while L <= r:\n",
+    "        mid = (L + r) // 2\n",
+    "        cnt = sum(Count(row, mid) for row in matrix)\n",
+    "        if cnt <= (m * n) // 2:\n",
+    "            L = mid + 1\n",
+    "        else:\n",
+    "            r = mid - 1\n",
+    "    return L"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -264,9 +312,138 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6bd460ff",
+   "metadata": {},
+   "source": [
+    "## Coding Ninjas Problem of the Day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "66f42200",
+   "metadata": {},
+   "source": [
+    "## [Easy](https://www.codingninjas.com/studio/problems/sort-the-tuples_5558649)\n",
+    "### [Python Compiler error]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "e4d55036",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from typing import List\n",
+    "def sortTuples(arr : List[List[int]]):\n",
+    "    for i, tup in enumerate(arr):\n",
+    "        tup.append(i)\n",
+    "    \n",
+    "    arr.sort(key=lambda x: (x[-2], x[-1]))\n",
+    "\n",
+    "    for tup in arr:\n",
+    "        tup.pop()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8494e61",
+   "metadata": {},
+   "source": [
+    "## [Moderate]()"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18040931",
+   "id": "f751f333",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from queue import Queue\n",
+    "\n",
+    "class BoundedBlockingQueue:\n",
+    "\n",
+    "    def __init__(self, capacity):\n",
+    "        self.q = Queue()\n",
+    "        self.push = Queue()\n",
+    "        self.pop = 0\n",
+    "        self.cap = capacity\n",
+    "        self.curr = 0\n",
+    "\n",
+    "    def Enqueue(self, val):\n",
+    "        if self.curr < self.cap:\n",
+    "            self.q.put(val)\n",
+    "            self.curr += 1\n",
+    "        else:\n",
+    "            self.push.put(val)\n",
+    "\n",
+    "        if self.pop > 0:\n",
+    "            self.handle()\n",
+    "\n",
+    "    def handle(self):\n",
+    "        front = self.q.get()\n",
+    "        self.curr -= 1\n",
+    "        self.pop -= 1\n",
+    "        print(front, end=' ')\n",
+    "\n",
+    "    def Dequeue(self):\n",
+    "        if self.curr == 0:\n",
+    "            self.pop += 1\n",
+    "            return -1\n",
+    "\n",
+    "        front = self.q.get()\n",
+    "        self.curr -= 1\n",
+    "\n",
+    "        if not self.push.empty():\n",
+    "            ele = self.push.get()\n",
+    "            self.Enqueue(ele)\n",
+    "\n",
+    "        return front\n",
+    "\n",
+    "    def size(self):\n",
+    "        return self.curr"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5fc51cc",
+   "metadata": {},
+   "source": [
+    "## [Hard](https://www.codingninjas.com/studio/problems/cut-logs_982770)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "3348ef19",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def cutLogs(k, n):\n",
+    "    T=[[-1]*(n+1) for i in range(k+1)]\n",
+    "    def Memo(e,f):\n",
+    "        if f<=1 or e==1:return f  \n",
+    "        if T[e][f]!=-1:return T[e][f]\n",
+    "        ans=float('inf')\n",
+    "        start,end=1,f\n",
+    "        while start<=end:\n",
+    "            mid=(start+end)//2\n",
+    "            Break=Memo(e-1,mid-1)\n",
+    "            Survive=Memo(e,f-mid)\n",
+    "            ans=min(ans,1+max(Survive,Break))\n",
+    "            if Break<Survive:start=mid+1\n",
+    "            else:end=mid-1\n",
+    "        T[e][f]=ans\n",
+    "        return ans\n",
+    "    return Memo(k,n)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ee570e7f",
    "metadata": {},
    "outputs": [],
    "source": []
