--- a/LeetCode_Weekly_Contests/404.ipynb
+++ b/LeetCode_Weekly_Contests/404.ipynb
@@ -200,7 +200,7 @@
     "        if not edges1 or not edges2:\n",
     "            return 2\n",
     "        \n",
-    "        def treeDiameter(edges):\n",
+    "        def Diameter(edges):\n",
     "            n = len(edges) + 1\n",
     "            adj = [[] for _ in range(n)]\n",
     "            \n",
@@ -212,7 +212,7 @@
     "                dist = [-1] * n\n",
     "                q = deque([start])\n",
     "                dist[start] = 0\n",
-    "                farthest = start\n",
+    "                furthest = start\n",
     "                \n",
     "                while q:\n",
     "                    node = q.popleft()\n",
@@ -220,17 +220,17 @@
     "                        if dist[nei] == -1:\n",
     "                            dist[nei] = dist[node] + 1\n",
     "                            q.append(nei)\n",
-    "                            if dist[nei] > dist[farthest]:\n",
-    "                                farthest = nei\n",
+    "                            if dist[nei] > dist[furthest]:\n",
+    "                                furthest = nei\n",
     "                \n",
-    "                return farthest, dist[farthest]\n",
+    "                return furthest, dist[furthest]\n",
     "            \n",
     "            fb = bfs(edges[0][0])\n",
     "            sb = bfs(fb[0])\n",
     "            \n",
     "            return sb[1]\n",
     "\n",
-    "        def findTreeCenters(edges):\n",
+    "        def Centers(edges):\n",
     "            n = len(edges) + 1\n",
     "            adj = [[] for _ in range(n)]\n",
     "            degree = [0] * n\n",
@@ -264,20 +264,20 @@
     "            \n",
     "            return list(leaves)\n",
     "\n",
-    "        d1 = treeDiameter(edges1)\n",
-    "        d2 = treeDiameter(edges2)\n",
+    "        d1 = Diameter(edges1)\n",
+    "        d2 = Diameter(edges2)\n",
     "        \n",
-    "        centers1 = findTreeCenters(edges1)\n",
-    "        centers2 = findTreeCenters(edges2)\n",
+    "        C1 = Centers(edges1)\n",
+    "        C2 = Centers(edges2)\n",
     "        \n",
-    "        min_diameter = float('inf')\n",
+    "        min_ = float('inf')\n",
     "        \n",
-    "        for c1 in centers1:\n",
-    "            for c2 in centers2:\n",
-    "                new_diameter = max(d1, d2, (d1 + 1) // 2 + (d2 + 1) // 2 + 1)\n",
-    "                min_diameter = min(min_diameter, new_diameter)\n",
+    "        for c1 in C1:\n",
+    "            for c2 in C2:\n",
+    "                new_ = max(d1, d2, (d1 + 1) // 2 + (d2 + 1) // 2 + 1)\n",
+    "                min_ = min(min_, new_)\n",
     "        \n",
-    "        return min_diameter"
+    "        return min_"
    ]
   }
  ],
