--- a/LeetCode_Weekly_Contests/404.ipynb
+++ b/LeetCode_Weekly_Contests/404.ipynb
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "ae2343ed",
    "metadata": {},
    "outputs": [],
@@ -195,11 +195,9 @@
     "\n",
     "class Solution:\n",
     "    def minimumDiameterAfterMerge(self, edges1: list[list[int]], edges2: list[list[int]]) -> int:\n",
-    "        if not edges1 and not edges2:\n",
-    "            return 1\n",
-    "        if not edges1 or not edges2:\n",
-    "            return 2\n",
-    "        \n",
+    "        if not edges1 and not edges2:return 1\n",
+    "        if not edges1 or not edges2:return 2\n",
+    "\n",
     "        def Diameter(edges):\n",
     "            n = len(edges) + 1\n",
     "            adj = [[] for _ in range(n)]\n",
@@ -279,6 +277,14 @@
     "        \n",
     "        return min_"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85cb02fa-59df-48c8-9d51-2fb734d6632f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
